Fixed word wrapping.

--- a/bx/assets/style.css
+++ b/bx/assets/style.css
@@ -84,8 +84,8 @@ button {
     color: inherit;
     line-height: 1.3;
 }
-.log-records .record a {
-    word-break: break-all;
+.log-records .record .message {
+    word-break: break-word;
 }
 .log-records .record.highlight span.highlight {
     text-shadow: 0 0 15px rgba(108, 240, 255, 0.57);
